--- a/locales/fr.json
+++ b/locales/fr.json
@@ -9,5 +9,7 @@
 	"ajouter": "ajouter",
 	"courriel": "courriel",
 	"telephone": "telephone",
-	"et" : "et"
+	"et": "et",
+	"clavader": "clavader",
+	"message": "message"
 }
